# orion

./: BOOTSTRAP_PLACEMENT_MARGIN_EXPLANATION.md  CLAUDE.md  CRYPTOFACE_FHE_EVALUATION_GUIDE.md  CRYPTOFACE_FHE_EVALUATION_RESULTS.md  CRYPTOFACE_FULL_MODEL_FINDINGS.md  CRYPTOFACE_WEIGHTS_SUMMARY.md  INVESTIGATION_SUMMARY.md  ISSUES.md  L2_NORMALIZATION_IMPLEMENTATION.md  LEVEL_ASSIGNMENT_VERIFICATION.md  PARALLEL_FHE_IMPLEMENTATION.md  pyproject.toml  test_cryptoface_cleartext_accuracy.py  test_cryptoface_pcnn_l2norm.py  test_l2norm_poly.py  test_single_backbone_l2.py
.github/workflows/: build.yml
CryptoFace/: LICENSE  README.md  argument.py  ckks.py  config.yaml  datasets.py  helper.py  train.py  utils.py
CryptoFace/cnn_ckks/: CMakeLists.txt
CryptoFace/models/: __init__.py  head.py  layers.py  pcnn.py
configs/: cryptoface_net16.yml  cryptoface_net4.yml  cryptoface_net9.yml  mlp.yml  pcnn-35-levels.yml  pcnn-backbone-40bit.yml  pcnn-backbone-fast.yml  pcnn-backbone.yml  pcnn.yml  pcnn_backbone-35.yml  pcnn_optionB.yml  pcnn_optionC.yml  resnet.yml
docs/: CUSTOM_FIT_WORKFLOW.md  PCNN_LEVEL_ISSUE_FIX.md
examples/: rich_test.py  rich_test2.py  rich_test3.py  run_alexnet.py  run_attention.py  run_dag_test.py  run_dlrm.py  run_einsum.py  run_lola.py  run_mlp.py  run_mobilenet.py  run_resnet.py
face_recognition/: CHECKPOINT_LOADING_FIXES.md  CHECKPOINT_LOADING_GUIDE.md  ISSUES.md  PLAN.md  WEIGHT_LOADING_FIX.md  __init__.py  debug_herpn_fusion.py  debug_nan.py
face_recognition/checkpoints/: backbone-64x64.ckpt  (+5 more)
models/: __init__.py  pcnn.py
orion/: __init__.py
(+113 files in other folders)
